# tsonu-music

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  STREAMING_PLAYER_INFRA_PLAN.md  package-lock.json  package.json  platform.yml
.github/workflows/: ci.yml  deploy.yml
backend/: Cargo.toml
backend/admin-api/: Cargo.toml
backend/admin-api/src/: analytics.rs  analytics_models.rs  catalog_models.rs  config.rs  db.rs  errors.rs  http.rs  keys.rs  lib.rs  main.rs  publish_builder.rs  publish_validation.rs  requests.rs  tests.rs  validation.rs
backend/admin-api/src/db/: analytics.rs  draft_encoding.rs  drafts.rs  maintenance.rs  maintenance_media.rs  publication.rs
backend/admin-api/src/state/: analytics.rs  encoding.rs  maintenance.rs  mod.rs  publishing.rs  rum.rs  uploads.rs
backend/encode-contract/: Cargo.toml
backend/encode-contract/src/: lib.rs  tests.rs
backend/encoder/: Cargo.toml
backend/encoder/src/: command.rs  config.rs  db.rs  error.rs  files.rs  handler.rs  lib.rs  loudness.rs  main.rs  probe.rs  response.rs  state.rs  tests.rs  transcode.rs  validation.rs  workdir.rs
catalog/: README.md
catalog/schemas/: encode-job.schema.json
db/migrations/: 001_create_music_catalog.sql  002_release_song_recording_model.sql  003_backend_play_events.sql  004_recording_files_media_model.sql
docs/: encode-trigger.md  ffmpeg-layer.md  media-catalog.md  rum-tracking.md  streaming-player.md  testing.md
frontend/: eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
public/: index.html
scripts/: build-ffmpeg-layer.sh  check-rust-file-lines.sh  deploy.sh  validate-manifests.mjs  validate-media-catalog-schemas.mjs
src/: App.css  App.js  App.test.js  CookieBanner.js  InstagramIframe.js  cookie-consent.js
(+104 files in other folders)
