[workspace]
members = ["admin-api", "encode-contract", "encoder"]
resolver = "2"

[workspace.dependencies]
aws-config = "1"
aws-sdk-cloudfront = "1"
aws-sdk-cloudwatchlogs = "1"
aws-sdk-lambda = "1"
aws-sdk-s3 = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
lambda_http = "0.13"
lambda_runtime = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "json"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
