[package]
name = "encoder"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aws-config.workspace = true
aws-sdk-s3.workspace = true
chrono.workspace = true
encode-contract = { path = "../encode-contract" }
lambda_runtime.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
